Updated with partial DOM code

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Revision Site</title>
+
 </head>
 <body>
 
@@ -11,7 +12,7 @@
         <h1>My Revision Website - "Apprenticeship Awesomeness!"</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="evidence.html">Evidence</a>
+            <a href="dom.html">DOM</a>
             <a href="projects.html">Projects</a>
        </nav>
     </header>
